refactor(test): racingCars 생성 시 Arrays.asList 사용